<resources>
  <string name="app_name">app0111</string>
  <string name="btnSqlite">SQLite 사용하기</string>
  <string name="btnInsert">추가</string>
  <string name="btnUpdate">수정</string>
  <string name="btnDelete">삭제</string>
  <string name="btnSelectAll">전체조회</string>
  <string name="btnSelectSeq">번호조회</string>
  <string name="btnSelectName">이름조회</string>
  <string name="btnFiles">파일 사용하기</string>
  <string name="btnSystemInFileWrite">내장 메모리에 파일 저장</string>
  <string name="btnSystemInFileRead">내장 메모리에서 파일 읽기</string>
  <string name="btnSystemOutFileWrite">외부 저장소에 파일 쓰기</string>
  <string name="btnSystemOutFileRead">외부 저장소에서 파일 읽기</string>
</resources>
