<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:padding="16dp">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center">

    <Button
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/btnInsert"
      android:text="@string/btnInsert"
      android:layout_marginEnd="4dp"/>

    <Button
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/btnUpdate"
      android:text="@string/btnUpdate"
      android:layout_marginEnd="4dp"/>

    <Button
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/btnDelete"
      android:text="@string/btnDelete" />
  </LinearLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginBottom="16dp"
    android:gravity="center">

    <Button
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/btnSelectAll"
      android:text="@string/btnSelectAll"
      android:layout_marginEnd="4dp"/>

    <Button
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/btnSelectName"
      android:text="@string/btnSelectName"
      android:layout_marginEnd="4dp"/>

    <Button
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/btnSelectSeq"
      android:text="@string/btnSelectSeq" />
  </LinearLayout>

  <View
    android:layout_width="match_parent"
    android:layout_height="2dp"
    android:background="#55000000"
    android:layout_marginBottom="16dp" />

  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp">

        <TextView
          android:layout_width="50dp"
          android:layout_height="wrap_content"
          android:text="번호 : " />

        <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:id="@+id/etSeq"
          android:hint="번호를 입력하세요" />
      </LinearLayout>

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp">

        <TextView
          android:layout_width="50dp"
          android:layout_height="wrap_content"
          android:text="이름 : " />

        <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:id="@+id/etName"
          android:hint="이름를 입력하세요" />
      </LinearLayout>

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp">

        <TextView
          android:layout_width="50dp"
          android:layout_height="wrap_content"
          android:text="휴대폰 : " />

        <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:id="@+id/etPhone"
          android:hint="휴대폰를 입력하세요" />
      </LinearLayout>

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp">

        <TextView
          android:layout_width="50dp"
          android:layout_height="wrap_content"
          android:text="이메일 : " />

        <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:id="@+id/etEmail"
          android:hint="이메일을 입력하세요" />
      </LinearLayout>

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp">

        <TextView
          android:layout_width="50dp"
          android:layout_height="wrap_content"
          android:text="주소 : " />

        <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:id="@+id/etAddress"
          android:hint="주소를 입력하세요" />
      </LinearLayout>

      <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/tvResult" />
    </LinearLayout>
  </ScrollView>
</LinearLayout>









